--- a/.github/workflows/validate-html.yaml
+++ b/.github/workflows/validate-html.yaml
@@ -15,4 +15,4 @@ jobs:
       - name: Validate
         uses: VaultVulp/action-pipenv@v2.0.1
         with:
-          root: : ${{ github.workspace }}
+          root: ${{ github.workspace }}
