--- a/.github/workflows/validate-html.yaml
+++ b/.github/workflows/validate-html.yaml
@@ -13,6 +13,6 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Validate
-        uses: VaultVulp/action-pipenv@v2.0.1
+        uses: Cyb3r-Jak3/html5validator-action@v0.6.1
         with:
           root: ${{ github.workspace }}
